[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sklvq"
dynamic = ["version"]
description = "A collection of Learning Vector Quantization algorithms compatible with scikit-learn"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"

maintainers = [{ name = "Rick van Veen", email = "r.van.veen133@gmail.com" }]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
dependencies = ["numpy>=1.17.3", "scikit-learn<=1.5.2", "scipy>=1.3.2"]

[project.optional-dependencies]
docs = [
    "matplotlib",
    "numpydoc",
    "pillow",
    "sphinx",
    "sphinx-gallery",
    "sphinx_rtd_theme",
]
tests = ["coverage", "pandas", "pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/rickvanveen/sklvq"
Download = "https://github.com/rickvanveen/sklvq"
Documentation = "https://github.com/rickvanveen/sklvq"
Issues = "https://github.com/rickvanveen/sklvq"
Source = "https://github.com/rickvanveen/sklvq"

[tool.hatch.version]
path = "src/sklvq/__about__.py"

[tool.hatch.envs.docs]
features = ["docs"]

[tool.hatch.envs.hatch-static-analysis]
config-path = "ruff.toml"

[tool.ruff]
extend = "ruff.toml"
target-version = "py311"

# [tool.hatch.envs.hatch-test]
# features = ["tests"]

[tool.hatch.envs.test]
features = ["tests"]

[tool.hatch.envs.test.scripts]
test = "pytest tests"   

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.coverage.run]
source_pkgs = ["sklvq", "tests"]
branch = true
parallel = true
omit = ["src/sklvq/__about__.py"]

[tool.coverage.paths]
sklvq = ["src/sklvq", "*/sklvq/src/sklvq"]
tests = ["tests", "*/sklvq/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "if 0:",
    "if self.verbose:",
    "show_missing = True",
]
